--- a/Landing Page/view/Round_schedule.html
+++ b/Landing Page/view/Round_schedule.html
@@ -48,12 +48,14 @@
                                             <td>Bhubaneshwar</td>
                                             <td>
                                                 <div>
-                                                    <input type="text" id="datepicker">
+                                                    <input type="date" id="datepicker">
                                                 </div>
                                             </td>
                                             <td>
 												<div>
-                                                    <input type="text" id="timepicker">
+                                                    <div class="col-lg-6">
+                                                    <input type="time" id="timepicker">
+                                                    </div>
 													<div class="col-lg-6">
 														<select class="form-control">
 														<option>AM</option>
@@ -79,12 +81,14 @@
                                             <td>Kolkatta</td>
                                             <td>
                                                 <div>
-                                                    <input type="text" id="datepicker">
+                                                    <input type="date" id="datepicker">
                                                 </div>
                                             </td>
                                             <td>
 												<div>
-                                                    <input type="text" id="timepicker">
+                                                    <div class="col-lg-6">
+                                                    <input type="time" id="timepicker">
+                                                    </div>
 													<div class="col-lg-6">
 														<select class="form-control">
 														<option>AM</option>
@@ -110,12 +114,14 @@
                                             <td>Hyderabad</td>
                                             <td>
                                                 <div>
-                                                    <input type="text" id="datepicker">
+                                                    <input type="date" id="datepicker">
 												</div>
                                             </td>
                                             <td>
 												<div>
-                                                    <input type="text" id="timepicker">
+                                                    <div class="col-lg-6">
+                                                    <input type="time" id="timepicker">
+                                                    </div>
 													<div class="col-lg-6">
 														<select class="form-control">
 														<option>AM</option>
@@ -141,12 +147,14 @@
                                             <td>Cuttack</td>
                                             <td>
                                                 <div>
-                                                    <input type="text" id="datepicker">
+                                                    <input type="date" id="datepicker">
                                                 </div>
                                             </td>
                                             <td>
 												<div>
-                                                    <input type="text" id="timepicker">
+                                                    <div class="col-lg-6">
+                                                    <input type="time" id="timepicker">
+                                                    </div>
 													<div class="col-lg-6">
 														<select class="form-control">
 														<option>AM</option>
