--- a/Landing Page/view/addjob.html
+++ b/Landing Page/view/addjob.html
@@ -53,13 +53,9 @@
                                             <textarea class="form-control" rows="3" placeholder="Enter Job Description .."></textarea>
                                         </div>
 										<div>
-											<label for="Confirm">Confirm
-											<div class="checkbox">
-                                            <label>
-                                                <input type="checkbox">&nbsp;Agree
-                                            </label>
-											</div>
-											</label>	
+											<label for="Confirm">Confirm</label><br>
+                                            <input type="checkbox"/>&nbsp;Agree
+												
 										</div>
 								</div><!-- /.box-body -->
                                 <div class="box-footer">
