--- a/Landing Page/view/slc.html
+++ b/Landing Page/view/slc.html
@@ -2,8 +2,21 @@
     <html>
         <head>
 		
-    <script src="../js/jquery.min.js"></script>
-            </head>
+            <script src="../js/jquery.min.js"></script>
+            
+            <script src="../js/knockout.js"></script>
+    
+            <script src="../viewModel/test3.js"></script>
+            
+            <script>
+            $(document).ready(function(){
+                              
+                          ko.applyBindings(new TaskListViewModel(),$(".ko-round")[0]);
+                              });
+            </script>
+        
+        </head>
+        
         <body>
                         
 <section  class="col-lg-12 "> 
@@ -48,42 +61,42 @@
                                                 <td>2</td>
                                                 <td>Java, jQuery, JavaScript, Dot Net</td>
                                                 <td>1. MSP (Microsoft Student Partner)<br>2.1st in webzilla</td>
-                                                <td><input type="checkbox"/ checked></td>
+                                                <td><input type="checkbox" /></td>
                                             </tr>
                                             <tr>
                                                 <td><label><a href="#">S. Mohanty</a></label></td>
                                                 <td>2</td>
                                                 <td>Java, jQuery, JavaScript, Dot Net</td>
                                                 <td>1. MSP (Microsoft Student Partner)</td>
-                                                <td><input type="checkbox" checked/></td>
+                                                <td><input type="checkbox" /></td>
                                             </tr>
                                             <tr>
                                                 <td><label><a href="#">S. Mohanty</a></label></td>
                                                 <td>2</td>
                                                 <td>Java, jQuery, JavaScript, Dot Net</td>
                                                 <td>1. MSP (Microsoft Student Partner)</td>
-                                                <td><input type="checkbox"/></td>
+                                                <td><input type="checkbox" /></td>
                                             </tr>
                                             <tr>
                                                 <td><label><a href="#">S. Mohanty</a></label></td>
                                                 <td>2</td>
                                                 <td>Java, jQuery, JavaScript, Dot Net</td>
                                                 <td>1. MSP (Microsoft Student Partner)</td>
-                                                <td><input type="checkbox"/ checked></td>
+                                                <td><input type="checkbox" /></td>
                                             </tr>
                                             <tr>
                                                 <td><label><a href="#">S. Mohanty</a></label></td>
                                                 <td>2</td>
                                                 <td>Java, jQuery, JavaScript, Dot Net</td>
                                                 <td>1. MSP (Microsoft Student Partner)</td>
-                                                <td><input type="checkbox"/></td>
+                                                <td><input type="checkbox" /></td>
                                             </tr>
                                             <tr>
                                                 <td><label><a href="#">S. Mohanty</a></label></td>
                                                 <td>2</td>
                                                 <td>Java, jQuery, JavaScript, Dot Net</td>
                                                 <td>1. MSP (Microsoft Student Partner)</td>
-                                                <td><input type="checkbox"/></td>
+                                                <td><input type="checkbox" /></td>
                                             </tr>
                         </table>
                         <hr>
@@ -94,17 +107,25 @@
                         <label><h4>Selected Candidates</h4></label>
                         <span class="badge col-lg-offset-1">3</span>
                     </div>
-                    <div>
-                         <label>Select Rounds</label><br><br>
-                            <button class=" btn btn-default btn-xs"><i class="fa fa-times fa-xs"></i></button> Online Test<br>
-                             <button class=" btn btn-default btn-xs"><i class="fa fa-times fa-xs"></i></button> Aptitude Round<br>
-                             <button class=" btn btn-default btn-xs"><i class="fa fa-times fa-xs"></i></button> Technical Round 1<br>
-                             <button class=" btn btn-default btn-xs"><i class="fa fa-times fa-xs"></i></button> Technical Round 2<br>
-                             <button class=" btn btn-default btn-xs"><i class="fa fa-times fa-xs"></i></button> Technical Round 3<br>
-                             <button class=" btn btn-default btn-xs"><i class="fa fa-times fa-xs"></i></button> Technical Round 4<br>
-                             <button class=" btn btn-default btn-xs"><i class="fa fa-times fa-xs"></i></button> Final HR Round<br><br>
-                         
-                        <button class="btn btn-default"><i class="fa fa-plus"> Add Round</i></button>
+                    <div class="ko-round">
+                        
+                         <h4><strong>Rounds</strong></h4><br>
+                            
+                        <form data-bind="submit: addTask">
+                            Add Round: <input data-bind="value: newTaskText" placeholder="Enter Round Name.." />&nbsp;
+                            <button class="btn btn-success" type="submit">Add</button>
+                        </form><br>
+                        
+                        <ol data-bind="foreach: tasks, visible: tasks().length > 0">
+                            <li>
+                                <input data-bind="value: title, disable: isDone" />
+                                <a href="#" data-bind="click: $parent.removeTask">Delete</a>
+                            </li><br> 
+                        </ol>
+                        
+
+                        Total round(s): &nbsp;<b data-bind="text: incompleteTasks().length"></b><br>
+                        <span data-bind="visible: incompleteTasks().length == 0">There are currently no rounds !</span>
                     </div><hr />
                     <!-- /.row -->
                     <!-- this row will not appear when printing -->
@@ -118,6 +139,11 @@
                                  </div></section>
                <!-- jQuery 2.0.2 -->
           <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+
+            <!--Rounds-->
+            <script></script>
+            
+            
             <!-- jQuery UI 1.10.3 -->
             <script src="../js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
             <!-- Bootstrap -->
